--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:jessie
+FROM nvidia/cuda:cudnn-runtime
 RUN apt-get update && apt-get install --no-install-recommends -y \
         g++ \
         libopenblas-dev \
