add replicated launcher support

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,3 +18,4 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
 RUN python -c 'import urllib2;exec(urllib2.urlopen("https://bootstrap.pypa.io/get-pip.py").read())' --no-cache-dir --timeout 1000 && \
     pip install --no-cache-dir --timeout 1000 -r "https://raw.githubusercontent.com/douban/tfmesos/master/requirements.txt" && \
     pip install --no-cache-dir --timeout 1000 "git+https://github.com/douban/tfmesos.git@master#egg=tfmesos"
+ENV DOCKER_IMAGE tfmesos/tfmesos
