--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+addict==1.0.0
 http-parser==0.8.3
 numpy==1.11.1
 protobuf==3.0.0b2
-pymesos==0.2.1
+pymesos==0.2.2
 six==1.10.0
 zkpython==0.4.2
 https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow-0.9.0-cp27-none-linux_x86_64.whl
