--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ python:
     - 2.7
 sudo: false
 install:
+    - pip install -U pip
     - pip install flake8
     - pip install -r requirements.txt
     - pip install .
