--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ protobuf==3.0.0b2
 pymesos==0.2.2
 six==1.10.0
 zkpython==0.4.2
-https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow-0.9.0-cp27-none-linux_x86_64.whl
+https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow-0.9.0-cp27-none-linux_x86_64.whl; python_version == '2.7'
+https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow-0.9.0-cp35-cp35m-linux_x86_64.whl; python_version == '3.5'
