use default repo

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,9 @@
 FROM nvidia/cuda:7.5-cudnn4-runtime
 RUN ln -s /usr/lib/x86_64-linux-gnu/libcudnn.so.4 /usr/lib/x86_64-linux-gnu/libcudnn.so
 RUN echo '\
-    deb mirror://mirrors.ubuntu.com/mirrors.txt trusty main\n\
-    deb mirror://mirrors.ubuntu.com/mirrors.txt trusty universe\n\
-    deb mirror://mirrors.ubuntu.com/mirrors.txt trusty-updates main\n'\
+    deb http://archive.ubuntu.com/ubuntu/ trusty main\n\
+    deb http://archive.ubuntu.com/ubuntu/ trusty universe\n\
+    deb http://archive.ubuntu.com/ubuntu/ trusty-updates main\n'\
     > /etc/apt/sources.list
 RUN apt-get update && apt-get install --no-install-recommends -y \
         gcc \
